Change folder structure

--- a/notebooks/Backtester.ipynb
+++ b/notebooks/Backtester.ipynb
@@ -12,9 +12,9 @@
     "import math\n",
     "import time\n",
     "\n",
-    "from OrderFlow import OrderFlow, readTxt\n",
-    "from Strategy import SpreadStrategy\n",
-    "from Backtester import Backtester"
+    "from TradingGym.OrderFlow import OrderFlow, readTxt\n",
+    "from TradingGym.Strategy import SpreadStrategy\n",
+    "from TradingGym.Backtester import Backtester"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "flow = OrderFlow()\n",
-    "flow.df =  readTxt('../Data/Si-3.18/txt/Si-3.18.2017-11-16.OrdLog.{1-OrdLog}.txt')"
+    "flow.df =  readTxt('../../Data/Si-3.18/txt/Si-3.18.2017-11-16.OrdLog.{1-OrdLog}.txt')"
    ]
   },
   {
