--- a/notebooks/VisualizeData.ipynb
+++ b/notebooks/VisualizeData.ipynb
@@ -11,8 +11,17 @@
     "import math\n",
     "import time\n",
     "\n",
-    "from OrderFlow import OrderFlow, readTxt\n",
-    "from OrderBook import OrderBook"
+    "from TradingGym.OrderFlow import OrderFlow, readTxt\n",
+    "from TradingGym.OrderBook import OrderBook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
    ]
   },
   {
@@ -22,7 +31,7 @@
    "outputs": [],
    "source": [
     "flow = OrderFlow()\n",
-    "flow.df =  readTxt('../Data/Si-3.18/txt/Si-3.18.2017-11-16.OrdLog.{1-OrdLog}.txt')"
+    "flow.df =  readTxt('../../Data/Si-3.18/txt/Si-3.18.2017-11-16.OrdLog.{1-OrdLog}.txt')"
    ]
   },
   {
