Switch to hdf, better plotting

--- a/notebooks/Backtester.ipynb
+++ b/notebooks/Backtester.ipynb
@@ -8,9 +8,11 @@
    "source": [
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
     "import numpy as np\n",
     "import math\n",
     "import time\n",
+    "import pandas as pd\n",
     "\n",
     "from TradingGym.OrderFlow import OrderFlow, readTxt\n",
     "from TradingGym.Strategy import SpreadStrategy\n",
@@ -23,8 +25,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hdf_path = '../../Data/Si-3.18/hdf5/Si-3_18.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = []\n",
+    "with pd.HDFStore(hdf_path) as store:\n",
+    "    keys = store.keys()\n",
+    "print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "flow = OrderFlow()\n",
-    "flow.df =  readTxt('../../Data/Si-3.18/txt/Si-3.18.2017-11-16.OrdLog.{1-OrdLog}.txt')"
+    "flow.df = pd.read_hdf(hdf_path, key=keys[0])"
    ]
   },
   {
@@ -33,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backtest = Backtester(flow, SpreadStrategy(10))"
+    "backtest = Backtester(flow, SpreadStrategy(1, 100))"
    ]
   },
   {
@@ -42,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts, position, r_pnl, ur_pnl = backtest.run()"
+    "ts, position, r_pnl, ur_pnl = backtest.run(10**6)"
    ]
   },
   {
@@ -51,12 +74,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "ax.set_title('Position')\n",
-    "ax.plot(ts, position, 'r')\n",
-    "fig.show()\n",
-    "fig.canvas.draw()"
+    "def plot(panel, title, col):\n",
+    "    assert(len(panel) == len(col))\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.set_title(title)\n",
+    "    for idx in range(len(panel)):\n",
+    "        ax.plot(panel[idx][0], panel[idx][1], col[idx])\n",
+    "\n",
+    "    hours = mdates.HourLocator()   # every hour\n",
+    "    hoursFmt = mdates.DateFormatter('')\n",
+    "    ax.xaxis.set_major_locator(hours)\n",
+    "    ax.xaxis.set_major_formatter(hoursFmt)\n",
+    "\n",
+    "    minutes = mdates.MinuteLocator(interval=10)  # every 10 minutes\n",
+    "    minutesFmt = mdates.DateFormatter('%D %H:%M')\n",
+    "    ax.xaxis.set_minor_locator(minutes)\n",
+    "    ax.xaxis.set_minor_formatter(minutesFmt)\n",
+    "\n",
+    "    plt.setp(ax.xaxis.get_minorticklabels(), size=8, rotation=20)\n",
+    "    plt.setp(ax.xaxis.get_majorticklabels(), rotation=90)\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    fig.show()"
    ]
   },
   {
@@ -65,13 +105,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "ax.set_title('PnL')\n",
-    "#plt.plot(ts[1:], [x + y for x,y in zip(r_pnl, ur_pnl)][1:], 'g')\n",
-    "plt.plot(ts, r_pnl, 'g')\n",
-    "fig.show()\n",
-    "fig.canvas.draw()"
+    "plot([[ts, position]], 'Position', ['r'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot([\n",
+    "        [ts, [x + y for x,y in zip(r_pnl, ur_pnl)]],\n",
+    "        [ts, r_pnl]\n",
+    "    ],\n",
+    "    'PnL', ['r', 'g'])"
    ]
   }
  ],
