Add elapsed time. Add price series

--- a/notebooks/Backtester.ipynb
+++ b/notebooks/Backtester.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts, position, r_pnl, ur_pnl = backtest.run(10**6)"
+    "ts, position, r_pnl, ur_pnl, price = backtest.run(10**5)"
    ]
   },
   {
@@ -106,6 +106,15 @@
    "outputs": [],
    "source": [
     "plot([[ts, position]], 'Position', ['r'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot([[ts, price]], 'Price', ['r'])"
    ]
   },
   {
