Fix logging. Change defaults

--- a/notebooks/RL.ipynb
+++ b/notebooks/RL.ipynb
@@ -126,27 +126,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tmp(split):\n",
-    "    for key in splits[split]:\n",
-    "        yield key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in tmp('train'):\n",
-    "    print(key)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,7 +177,7 @@
     "from rl.policy import BoltzmannQPolicy\n",
     "from rl.policy import EpsGreedyQPolicy\n",
     "\n",
-    "NB_STEPS_WARMUP = 10000\n",
+    "NB_STEPS_WARMUP = 1000\n",
     "MEM_LIMIT = 10\n",
     "LR = 1e-4\n",
     "TARGET_MODEL_UPDATE = 1e-3\n",
@@ -268,8 +247,7 @@
     "        print('Training algo {}'.format(algo))\n",
     "        agent = CompileAgent(algo)\n",
     "        for env in iterateEnv('train'):\n",
-    "            for i in range(trainEpisodes):\n",
-    "                agent.fit(env, nb_steps=1000, visualize=False, verbose=False)\n",
+    "                agent.fit(env, nb_steps=env.EPISODE*trainEpisodes, visualize=False, verbose=False)\n",
     "               \n",
     "        print('Validating algo {}'.format(algo))\n",
     "        agent.training = False\n",
@@ -277,9 +255,14 @@
     "        history = History()\n",
     "        for env in iterateEnv('val'):\n",
     "            agent.test(env, nb_episodes=testEpisodes, callbacks=[history], verbose=False)\n",
-    "            df_new.append(history.history['episode_reward'])\n",
+    "            df_new += history.history['episode_reward']\n",
     "        df_all[algo] = df_new\n",
-    "    \n",
+    "        \n",
+    "        mean = np.mean(np.array(df_new))\n",
+    "        std = np.std(np.array(df_new))\n",
+    "        z = mean / std\n",
+    "        print(\"mu: %.1f, sigma: %.1f, z: %.1f\" % (mean, std, z))\n",
+    "        \n",
     "    return df_all"
    ]
   },
