Progress bars + Separate trainVal, test funcs

--- a/notebooks/RL.ipynb
+++ b/notebooks/RL.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
     "import numpy as np\n",
     "import gym\n",
     "import pandas as pd\n",
@@ -20,6 +22,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import interactive\n",
+    "from tqdm import tqdm\n",
     "interactive(True)\n",
     "\n",
     "from keras.models import Sequential\n",
@@ -239,29 +242,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run(trainEpisodes, testEpisodes):\n",
+    "def trainVal(trainEpisodes, valEpisodes):\n",
     "    df_all = pd.DataFrame()\n",
     "    ALGO_NAMES = ['DQN', 'CEM', 'DNDQN', 'SARSA']\n",
     "    \n",
     "    for algo in ALGO_NAMES:\n",
-    "        print('Training algo {}'.format(algo))\n",
     "        agent = CompileAgent(algo)\n",
-    "        for env in iterateEnv('train'):\n",
+    "        for env in tqdm(iterateEnv('train'), total=sz['train'], desc='Training {}'.format(algo)):\n",
     "                agent.fit(env, nb_steps=env.EPISODE*trainEpisodes, visualize=False, verbose=False)\n",
-    "               \n",
-    "        print('Validating algo {}'.format(algo))\n",
+    "        agent.save_weights(os.path.join('../agents/', algo + '.h5'), overwrite=True)\n",
+    "        \n",
     "        agent.training = False\n",
     "        df_new = []\n",
     "        history = History()\n",
-    "        for env in iterateEnv('val'):\n",
-    "            agent.test(env, nb_episodes=testEpisodes, callbacks=[history], verbose=False)\n",
+    "        for env in tqdm(iterateEnv('val'), total=sz['val'], desc='Validating {}'.format(algo)):\n",
+    "            agent.test(env, nb_episodes=valEpisodes, callbacks=[history], verbose=False)\n",
     "            df_new += history.history['episode_reward']\n",
     "        df_all[algo] = df_new\n",
     "        \n",
     "        mean = np.mean(np.array(df_new))\n",
     "        std = np.std(np.array(df_new))\n",
     "        z = mean / std\n",
-    "        print(\"mu: %.1f, sigma: %.1f, z: %.1f\" % (mean, std, z))\n",
+    "        print(\"mu: %.1f, sigma: %.1f, z: %.4f\" % (mean, std, z))\n",
+    "        sys.stdout.flush()\n",
     "        \n",
     "    return df_all"
    ]
@@ -272,7 +275,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = run(10, 10)"
+    "def test(testEpisodes):\n",
+    "    df_all = pd.DataFrame()\n",
+    "    ALGO_NAMES = ['DQN', 'CEM', 'DNDQN', 'SARSA']\n",
+    "    for algo in ALGO_NAMES:\n",
+    "        agent = CompileAgent(algo)\n",
+    "        agent.load_weights(os.path.join('../agents/', algo + '.h5'))\n",
+    "        agent.training = False\n",
+    "        df_new = []\n",
+    "        history = History()\n",
+    "        for env in tqdm(iterateEnv('test'), total=sz['test'], desc='Testing {}'.format(algo)):\n",
+    "            agent.test(env, nb_episodes=testEpisodes, callbacks=[history], verbose=False)\n",
+    "            df_new += history.history['episode_reward']\n",
+    "        df_all[algo] = df_new\n",
+    "        \n",
+    "        mean = np.mean(np.array(df_new))\n",
+    "        std = np.std(np.array(df_new))\n",
+    "        z = mean / std\n",
+    "        print(\"mu: %.1f, sigma: %.1f, z: %.4f\" % (mean, std, z))\n",
+    "        sys.stdout.flush()\n",
+    "        \n",
+    "    return df_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = trainVal(10, 10)"
    ]
   },
   {
