Update default hyper-parameters

--- a/notebooks/RL.ipynb
+++ b/notebooks/RL.ipynb
@@ -26,7 +26,7 @@
     "interactive(True)\n",
     "\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Activation, Flatten, LSTM\n",
+    "from keras.layers import Dense, Activation, Flatten\n",
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import History"
    ]
@@ -146,14 +146,13 @@
     "\n",
     "model = Sequential()\n",
     "model.add(Flatten(input_shape=(1,) + model_env.observation_space.shape))\n",
-    "model.add(Dense(64))\n",
+    "model.add(Dense(4))\n",
     "model.add(Activation('elu'))\n",
-    "model.add(Dense(64))\n",
+    "model.add(Dense(4))\n",
     "model.add(Activation('elu'))\n",
-    "model.add(Dense(64))\n",
+    "model.add(Dense(4))\n",
     "model.add(Activation('elu'))\n",
     "model.add(Dense(nb_actions))\n",
-    "model.add(Activation('softmax'))\n",
     "print(model.summary())"
    ]
   },
@@ -180,48 +179,47 @@
     "from rl.policy import BoltzmannQPolicy\n",
     "from rl.policy import EpsGreedyQPolicy\n",
     "\n",
-    "NB_STEPS_WARMUP = 1000\n",
-    "MEM_LIMIT = 10\n",
-    "LR = 1e-4\n",
-    "TARGET_MODEL_UPDATE = 1e-3\n",
+    "NB_STEPS_WARMUP = 10000\n",
+    "MEM_LIMIT = 1000\n",
+    "LR = 1e-3\n",
+    "TARGET_MODEL_UPDATE = 1e-2\n",
     "WINDOW_LENGTH = 1\n",
+    "\n",
+    "policy = BoltzmannQPolicy()\n",
+    "# policy = EpsGreedyQPolicy()\n",
+    "test_policy = GreedyQPolicy()\n",
+    "#test_policy = BoltzmannQPolicy()\n",
     "\n",
     "def CompileAgent(algo):\n",
     "    if (algo == 'DQN'):\n",
     "        memory = SequentialMemory(limit=MEM_LIMIT, window_length=WINDOW_LENGTH)\n",
-    "        policy = BoltzmannQPolicy()\n",
-    "        test_policy = GreedyQPolicy()\n",
     "        dqn = DQNAgent(model=model, nb_actions=nb_actions, memory=memory, nb_steps_warmup=NB_STEPS_WARMUP,\n",
-    "               target_model_update=TARGET_MODEL_UPDATE, policy=policy, test_policy = GreedyQPolicy())\n",
+    "               target_model_update=TARGET_MODEL_UPDATE, policy=policy, test_policy=test_policy)\n",
     "        dqn.compile(Adam(lr=LR), metrics=['mae'])\n",
     "        \n",
     "        return dqn\n",
     "    elif (algo == 'CEM'):\n",
     "        memory = EpisodeParameterMemory(limit=MEM_LIMIT, window_length=WINDOW_LENGTH)\n",
     "        cem = CEMAgent(model=model, nb_actions=nb_actions, memory=memory,\n",
-    "                       batch_size=10, nb_steps_warmup=NB_STEPS_WARMUP, train_interval=10,\n",
-    "                       elite_frac=0.20, noise_decay_const=0.1, noise_ampl=1.0)\n",
+    "                       batch_size=8, nb_steps_warmup=NB_STEPS_WARMUP, train_interval=50,\n",
+    "                       elite_frac=0.05, noise_decay_const=0.1, noise_ampl=1.0)\n",
     "        cem.compile()\n",
     "        \n",
     "        return cem\n",
     "    elif (algo == 'DNDQN'):\n",
     "        memory = SequentialMemory(limit=MEM_LIMIT, window_length=WINDOW_LENGTH)\n",
-    "        policy = BoltzmannQPolicy()\n",
-    "        test_policy = GreedyQPolicy()\n",
     "        # enable the dueling network\n",
     "        # you can specify the dueling_type to one of {'avg','max','naive'}\n",
     "        dqn = DQNAgent(model=model, nb_actions=nb_actions, memory=memory, nb_steps_warmup=NB_STEPS_WARMUP,\n",
     "                       enable_dueling_network=True, dueling_type='avg', target_model_update=TARGET_MODEL_UPDATE,\n",
-    "                       policy=policy, test_policy = GreedyQPolicy())\n",
+    "                       policy=policy, test_policy=test_policy)\n",
     "        dqn.compile(Adam(lr=LR), metrics=['mae'])\n",
     "        \n",
     "        return dqn\n",
     "    elif (algo == 'SARSA'):\n",
     "        # SARSA does not require a memory.\n",
-    "        policy = BoltzmannQPolicy()\n",
-    "        test_policy = GreedyQPolicy()\n",
-    "        sarsa = SARSAAgent(model=model, nb_actions=nb_actions, nb_steps_warmup=WINDOW_LENGTH,\n",
-    "                           policy=policy, test_policy = GreedyQPolicy())\n",
+    "        sarsa = SARSAAgent(model=model, nb_actions=nb_actions, nb_steps_warmup=NB_STEPS_WARMUP,\n",
+    "                           policy=policy, test_policy=test_policy)\n",
     "        sarsa.compile(Adam(lr=LR), metrics=['mae'])\n",
     "        \n",
     "        return sarsa\n",
@@ -304,7 +302,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = trainVal(10, 10)"
+    "df = trainVal(100, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = test(100)"
    ]
   },
   {
